@@ -119,6 +119,6 @@ if [ -z "$(pactl list short modules | grep source=$LS_SINK.monitor)" ]; then
     destination_ip=127.0.0.1 port="$LS_PORT" source_ip=127.0.0.1 > /dev/null
 fi
 
-export LS_FIFO="$ADDON_DIR/rc"
+export LS_FIFO="/var/run/librespot"
 
 eval $LIBRESPOT
